<resources>

    <string name="app_name">OSGi</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">OSGi</string>
    <string name="local">local</string>
    <string name="dosgi">dosgi</string>
    <string name="button">Button</string>
    <string name="rosgi">rosgi</string>
    <string name="run1">1x</string>
    <string name="image">image</string>
    <string name="echo">echo</string>
    <string name="video">video</string>
    <string name="title_activity_video_record">VideoRecord</string>
    <string name="title_activity_test">TEST</string>
    <string name="udp">udp</string>
    <string name="test_group">Test:</string>
    <string name="protocol_group">Protocol:</string>
    <string name="run_group">Run:</string>
    <string name="run5">5x</string>
    <string name="run20">20x</string>
    <string name="protocol_other">other</string>
    <string name="s_0">s=0</string>

</resources>